<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_button_text"/>

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_name_hint_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_description_hint_text"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name"
        app:layout_constraintStart_toStartOf="parent"/>


    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/create_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_private_switch"
        app:srcCompat="@android:color/transparent" />

    <Switch
        android:id="@+id/public_private_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_activity_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_description" />

    <TextView
        android:id="@+id/textViewNoPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_activity_text_view_no_picture"
        app:layout_constraintTop_toTopOf="@id/image_preview"
        app:layout_constraintBottom_toBottomOf="@id/image_preview"
        app:layout_constraintStart_toStartOf="@id/image_preview"
        app:layout_constraintEnd_toEndOf="@id/image_preview"/>


</androidx.constraintlayout.widget.ConstraintLayout>