<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="332dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            app:srcCompat="@drawable/schriftzug_hikingspots"
            android:src="@drawable/schriftzug_hikingspots"/>

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/Login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/Login_Password"
            android:inputType="textPassword" />

    <Button
        android:id="@+id/signinButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/Login_Submit" />

    <TextView
        android:id="@+id/loginMessage"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="invisible" />

    </LinearLayout>
